[package]
name = "pegasus"
version = "0.1.0"
authors = ["alanhkarp <alanhkarp@gmail.com>"]
edition = "2021"

[features]
docker = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.4.4"
crossbeam-utils = "0.8.5"
# fd-passing = "0.0.1"
futures = "0.3"
#libc = "0.2.65"
#mio-named-pipes = "0.1"
#miow = "0.3.3"
nix = "0.22.0"
#parity-tokio-ipc = "0.8.0"
#passfd = "0.1.4"
passfd = { git = "https://github.com/polachok/passfd", rev = "346302f" }
#pipe = { version = "0.4.0", features = ["bidirectional"] }
pnet = "*" # For live.rs only
pretty-hex = "*" # For live.rs only
rand = "0.7"
reactor = { git = "https://github.com/dalnefre/ReActor" }
shared_memory = "0.12.0"
thiserror = "1.0"
tokio = { version = "1.7.0", features = ["full"]}
#tokio-compat-02 = "0.2"
tokio-file-unix = "0.6.0" 
tokio-pipe = "0.2.1"
#tokio-util = { version = "0.6.7", features = ["codec"] }
